--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Basic styling */
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -6,7 +6,7 @@ body {
   }
   
   header {
-    background-color: #333;
+    background-color:rgb(0, 140, 255);
     color: #fff;
     padding: 15px 0;
   }
@@ -20,11 +20,21 @@ body {
   
   .logo {
     font-size: 24px;
+    font-weight: bold;
   }
   
   .nav-links {
     list-style-type: none;
     display: flex;
+    text-decoration: none;
+    color: #fff;
+  }
+  .nav-links a {
+    text-decoration: none;
+    color: #fff;
+  }
+  .sec-link a{
+    text-decoration: none;
   }
   
   .nav-links li {
@@ -36,5 +46,5 @@ body {
     align-items: center;
   }
   
-  /* Other section styles can be added */
+  
   
